@@ -2,34 +2,30 @@ package com.example.demo.service;
 
 import java.util.stream.Collectors;
 import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
-import java.time.temporal.WeekFields;
-import java.util.Comparator;
-import java.util.HashMap;
+import java.util.Collections;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
-import java.util.Set;
+import java.util.Objects;
+import java.util.function.Function;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
-import com.example.demo.dto.MuscleGroupTotalDTO;
-import com.example.demo.dto.PopularTypesDTO;
-import com.example.demo.dto.TestDTO;
-import com.example.demo.dto.WeeklyFrequencyDTO;
-import com.example.demo.dto.WeeklySummaryDTO;
-import com.example.demo.dto.WorkoutProgressDTO;
-import com.example.demo.dto.WorkoutSessionDTO;
-import com.example.demo.dto.WorkoutSessionRequestDTO;
-import com.example.demo.dto.WorkoutSessionSummaryDTO;
-import com.example.demo.dto.WorkoutSetDTO;
+import com.example.demo.dto.CreateSessionRequestDTO;
+import com.example.demo.dto.ExerciseDetailDTO;
+import com.example.demo.dto.SessionDetailDTO;
+import com.example.demo.dto.SetDetailDTO;
+import com.example.demo.dto.VolumeProgressDTO;
+import com.example.demo.dto.WorkoutAllSessionsDTO;
 import com.example.demo.entity.User;
+import com.example.demo.entity.WorkoutExercise;
 import com.example.demo.entity.WorkoutSession;
 import com.example.demo.entity.WorkoutSet;
+import com.example.demo.entity.TemplateSession;
 import com.example.demo.entity.WorkoutType;
 import com.example.demo.exception.ApiErrorCode;
 import com.example.demo.exception.ApiException;
+import com.example.demo.repository.TemplateSessionRepository;
 import com.example.demo.repository.UserRepository;
 import com.example.demo.repository.WorkoutSessionRepository;
 import com.example.demo.repository.WorkoutTypeRepository;
@@ -39,85 +35,47 @@ public class WorkoutSessionService {
     private final WorkoutSessionRepository workoutSessionRepository;
     private final UserRepository userRepository;
     private final WorkoutTypeRepository workoutTypeRepository;
+    private final TemplateSessionRepository templateSessionRepository;
 
     public WorkoutSessionService(
         WorkoutSessionRepository workoutSessionRepository,
         UserRepository userRepository,
-        WorkoutTypeRepository workoutTypeRepository
+        WorkoutTypeRepository workoutTypeRepository,
+        TemplateSessionRepository templateSessionRepository
     ) {
         this.userRepository = userRepository;
         this.workoutSessionRepository = workoutSessionRepository;
         this.workoutTypeRepository = workoutTypeRepository;
+        this.templateSessionRepository = templateSessionRepository;
     }
 
-    private String findWorkoutTypeNameByTypeId(Long TypeId){
-        //WorkoutType::getName ---> WorkoutType -> WorkoutType.getName()
-        //return workoutTypeRepository.findById(TypeId).map(WorkoutType::getName).orElseGet(()->"Invalid id");
-        //orElseGet(lambda parameter) orElse(other parameter)//前者不會先載入，後者不管如何都會先載入
-        return workoutTypeRepository.findById(TypeId).map(WorkoutType::getName).orElseThrow(() ->
-            new ApiException(ApiErrorCode.TYPE_NOT_FOUND,"沒有對應的部位, typeID:" + TypeId, HttpStatus.NOT_FOUND)
-        );
-    }
-
-    private Integer calculateTotalWeight(List<WorkoutSet> sets) {
-        return sets.stream()
-                   .mapToInt(set -> set.getWeight() * set.getReps())
-                   .sum();
-    }
-
-    public void addSessionTest(Long id, TestDTO testDTO){
-        
-        System.out.println("傳入的session" + testDTO.getDate());
-        System.out.println("傳入的session" + testDTO.getNote());
-        User user = userRepository.findById(id).orElseThrow(() -> new ApiException(ApiErrorCode.USER_NOT_FOUND, "找不到使用者, Id:"+ id, HttpStatus.NOT_FOUND));
-        WorkoutSession session = new WorkoutSession();
-        session.setDate(testDTO.getDate());
-        session.setNote(testDTO.getNote());
-        session.setUser(user);
-        if (testDTO.getSets() == null) {
-            throw new ApiException(ApiErrorCode.BAD_REQUEST, "缺少訓練組內容", HttpStatus.BAD_REQUEST);
-        }
-        System.out.println("綁定set之前" + session.getNote());
-        System.out.println("綁定set之前" + session.getDate());
-        
-        List<WorkoutSet> sets = testDTO.getSets().stream()
-            .map(dto -> {
-                WorkoutSet set = new WorkoutSet();
-                set.setTypeId(dto.getTypeId());
-                set.setReps(dto.getReps());
-                set.setWeight(dto.getWeight());
-                set.setSession(session); // 設定關聯
-                return set;
-            })
-            .collect(Collectors.toList());
-        session.setSets(sets); 
-    }
-
-    public void addSession(Long id, WorkoutSessionRequestDTO workoutSessionRequestDTO){
+    public void addSession(Long id, CreateSessionRequestDTO dto){
         
         User user = userRepository.findById(id).orElseThrow(() -> new ApiException(ApiErrorCode.USER_NOT_FOUND, "找不到使用者, Id:"+ id, HttpStatus.NOT_FOUND));
-        // 1. 建立 WorkoutSession 物件，並設定基本欄位與 user
-        WorkoutSession session = new WorkoutSession();
-        session.setDate(workoutSessionRequestDTO.getDate());
-        session.setNote(workoutSessionRequestDTO.getNote());
-        session.setUser(user);
-        // 2. 建立每一組 set 的實體物件並與 session 關聯
 
-        List<WorkoutSet> sets = workoutSessionRequestDTO.getSets().stream()
-            .map(dto -> {
-                if(dto.getTypeId() == null || dto.getReps() == null || dto.getWeight() == null){
+        WorkoutSession session = new WorkoutSession(dto.getDate(), dto.getTitle());
+        session.setUser(user);
+        
+        List<WorkoutExercise> exercises = dto.getExercises().stream().map(exDto -> {
+            WorkoutType type = workoutTypeRepository.findById(exDto.getTypeId()).orElseThrow(() -> new ApiException(ApiErrorCode.TYPE_NOT_FOUND,"沒有這個動作" + exDto.getTypeId(), HttpStatus.NOT_FOUND));
+    
+            WorkoutExercise ex = new WorkoutExercise(type);
+            ex.setSession(session);
+    
+            List<WorkoutSet> sets = exDto.getSets().stream().map(setDto -> {
+                if(setDto.getReps() == null || setDto.getWeight() == null){
                     throw new ApiException(ApiErrorCode.BAD_REQUEST, "缺少訓練組內容",  HttpStatus.BAD_REQUEST);
                 }
-                WorkoutSet set = new WorkoutSet();
-                set.setTypeId(dto.getTypeId());
-                set.setReps(dto.getReps());
-                set.setWeight(dto.getWeight());
-                set.setSession(session); // 設定關聯
+                WorkoutSet set = new WorkoutSet(setDto.getReps(), setDto.getWeight());
+                set.setExercise(ex);
                 return set;
-            })
-            .collect(Collectors.toList());
-        session.setSets(sets); // session 綁定這些 sets
-        // 3. 存入資料庫（因為 cascade 設定所以 sets 也會一併儲存）
+            }).collect(Collectors.toList());
+    
+            ex.setSets(sets);
+            return ex;
+        }).collect(Collectors.toList());
+
+        session.setExercises(exercises);
         workoutSessionRepository.save(session);
     }
 
@@ -132,28 +90,91 @@ public class WorkoutSessionService {
     }
 
 
-    public List<WorkoutSessionDTO> getAllSession(Long id){
+    public List<WorkoutAllSessionsDTO> getAllSession(Long id){
         userRepository.findById(id).orElseThrow(() -> new ApiException(ApiErrorCode.USER_NOT_FOUND, "找不到使用者, Id:"+ id, HttpStatus.NOT_FOUND));
-        List<WorkoutSessionDTO> sessionDTOs = workoutSessionRepository.findByUser_Id(id).stream()
-            .map(session -> {
-                List<WorkoutSetDTO> setDTOs = session.getSets().stream()
-                    .map(set -> new WorkoutSetDTO(
-                        set.getId(),
-                        findWorkoutTypeNameByTypeId(set.getTypeId()), 
-                        set.getWeight(), 
-                        set.getReps()
-                    ))
-                    .collect(Collectors.toList());
-                    return new WorkoutSessionDTO(
-                        session.getId(), 
-                        session.getDate(), 
-                        session.getNote(), 
-                        setDTOs);
-            })
-            .collect(Collectors.toList());
+
+        List<WorkoutAllSessionsDTO> sessionDTOs =  workoutSessionRepository.findByUser_Id(id).stream().map(session -> {
+            List<String> mainTags = session.getExercises().stream()
+                .map(ex ->  ex.getWorkoutType().getMainTag())
+                .filter(Objects::nonNull)
+                .distinct()
+                .limit(3) // 最多顯示三個主 tag
+                .collect(Collectors.toList());
+    
+            return new WorkoutAllSessionsDTO(
+                session.getId(),
+                session.getTitle(),       
+                session.getDate(),
+                mainTags
+            );
+        }).collect(Collectors.toList());
+
         return sessionDTOs;
     }
 
+    public SessionDetailDTO getSessionDetailById(Long userId, Long sessionId) {
+        userRepository.findById(userId).orElseThrow(() -> new ApiException(ApiErrorCode.USER_NOT_FOUND, "找不到使用者, Id:"+ userId, HttpStatus.NOT_FOUND));
+
+        WorkoutSession session = workoutSessionRepository.findById(sessionId)
+            .orElseThrow(() -> new ApiException(ApiErrorCode.SESSION_NOT_FOUND, "找不到紀錄", HttpStatus.NOT_FOUND));
+
+            List<ExerciseDetailDTO> exercises = session.getExercises().stream().map(ex -> {
+                WorkoutType wt = ex.getWorkoutType();
+            
+                List<SetDetailDTO> sets = ex.getSets().stream()
+                    .map(set -> new SetDetailDTO(set.getReps(), set.getWeight()))
+                    .collect(Collectors.toList());
+            
+                return new ExerciseDetailDTO(
+                    wt.getName(),
+                    wt.getMainTag(),
+                    wt.getSecondaryTags(),  // 直接從 entity 取出 secondaryTags
+                    sets
+                );
+            }).collect(Collectors.toList());
+            
+        return new SessionDetailDTO(
+            session.getId(),
+            session.getTitle(),      // 或 session.getTitle() 若你改名過
+            session.getDate(),
+            exercises
+        );
+    }
+
+    public void updateSession(Long userId, Long sessionId, CreateSessionRequestDTO dto) {
+        userRepository.findById(userId).orElseThrow(() -> new ApiException(ApiErrorCode.USER_NOT_FOUND, "找不到使用者, Id:"+ userId, HttpStatus.NOT_FOUND));
+
+        WorkoutSession session = workoutSessionRepository.findById(sessionId)
+            .orElseThrow(() -> new ApiException(ApiErrorCode.SESSION_NOT_FOUND, "找不到紀錄", HttpStatus.NOT_FOUND));
+    
+        // 更新基本欄位
+        session.setDate(dto.getDate());
+        session.setNote(dto.getTitle());
+    
+        // 移除原本的 exercise（包含 set）
+        session.getExercises().clear();
+    
+        List<WorkoutExercise> newExercises = dto.getExercises().stream().map(exDto -> {
+            WorkoutType type = workoutTypeRepository.findById(exDto.getTypeId()).orElseThrow(() -> new ApiException(ApiErrorCode.TYPE_NOT_FOUND, "找不到動作", HttpStatus.NOT_FOUND));
+    
+            WorkoutExercise ex = new WorkoutExercise(type);
+            ex.setSession(session);
+    
+            List<WorkoutSet> sets = exDto.getSets().stream().map(setDto -> {
+                WorkoutSet set = new WorkoutSet(setDto.getReps(), setDto.getWeight());
+                set.setExercise(ex);
+                return set;
+            }).collect(Collectors.toList());
+    
+            ex.setSets(sets);
+            return ex;
+        }).collect(Collectors.toList());
+    
+        session.setExercises(newExercises);
+    
+        // 不需要 save，因為 JPA 已追蹤實體
+    }
+    
     public void deleteSession(Long id, Long sessionId){
         userRepository.findById(id).orElseThrow(() -> new ApiException(ApiErrorCode.USER_NOT_FOUND, "找不到使用者, id:" + id, HttpStatus.NOT_FOUND));
         WorkoutSession session = workoutSessionRepository.findByIdAndUser_Id(sessionId, id).orElseThrow(() -> 
@@ -162,108 +183,109 @@ public class WorkoutSessionService {
         workoutSessionRepository.delete(session);
     }
 
-    public List<WorkoutSessionSummaryDTO> getWorkoutSessionSummary(Long id){
-        User user = userRepository.findById(id).orElseThrow(() -> new ApiException(ApiErrorCode.USER_NOT_FOUND, "找不到使用者, id:" + id, HttpStatus.NOT_FOUND));
-        List<WorkoutSessionSummaryDTO> summaryDTO = workoutSessionRepository.findByUser_Id(user.getId()).stream()
+    //新的內容
+    //處理訓練紀錄頁面重構時回頭來做這個api
+    public Long createFromTemplate(Long userId, Long templateId) {
+        // 1. 取得 user 與 template
+        User user = userRepository.findById(userId).orElseThrow(() -> new ApiException(ApiErrorCode.USER_NOT_FOUND, "使用者不存在", HttpStatus.NOT_FOUND));
+
+        TemplateSession templateSession = templateSessionRepository.findById(templateId).orElseThrow(() -> new ApiException(ApiErrorCode.TEMPLATE_NOT_FOUND, "訓練模板不存在", HttpStatus.NOT_FOUND));
+
+        // 2. 建立 session 並設定使用者與時間（以現在為訓練時間）
+        WorkoutSession session = new WorkoutSession(LocalDate.now(), templateSession.getTitle());
+        session.setUser(user);
+
+        List<WorkoutExercise> exercises = templateSession.getExercises().stream().map(templateEx -> {
+            WorkoutType type = templateEx.getWorkoutType();
+    
+            WorkoutExercise exercise = new WorkoutExercise(type);
+            exercise.setSession(session);
+    
+            List<WorkoutSet> sets = templateEx.getSets().stream().map(templateSet -> {
+                WorkoutSet set = new WorkoutSet(templateSet.getReps(), templateSet.getWeight());
+                set.setExercise(exercise);
+                return set;
+            }).collect(Collectors.toList());
+    
+            exercise.setSets(sets);
+            return exercise;
+        }).collect(Collectors.toList());
+    
+        session.setExercises(exercises);
+        workoutSessionRepository.save(session);
+    
+        return session.getId();
+    }
+
+    //chart1
+    public Map<String, Long> getTagFrequency(Long userId, String period) {
+        LocalDate start = switch (period) {
+            case "weekly" -> LocalDate.now().minusDays(6);
+            case "two-weeks" -> LocalDate.now().minusDays(13);
+            case "monthly" -> LocalDate.now().minusDays(29);
+            default -> throw new ApiException(
+                ApiErrorCode.INVALID_REQUEST, // ← 如果你已有這類錯誤代碼
+                "不合法的期間參數：" + period,
+                HttpStatus.BAD_REQUEST
+            );
+        };
+    
+        List<WorkoutSession> sessions = workoutSessionRepository.findByUserIdAndDateAfter(userId, start);
+    
+        return sessions.stream()
+            .flatMap(session -> session.getExercises().stream())
+            .map(ex -> ex.getWorkoutType().getMainTag())
+            .filter(Objects::nonNull)
+            .collect(Collectors.groupingBy(Function.identity(), Collectors.counting()));
+    }
+
+    //chart2
+    public Map<String, Long> getMuscleGroupBalance(Long userId, String period) {
+        LocalDate start = switch (period) {
+            case "weekly" -> LocalDate.now().minusDays(6);
+            case "two-weeks" -> LocalDate.now().minusDays(13);
+            case "monthly" -> LocalDate.now().minusDays(29);
+            default -> throw new ApiException(
+                ApiErrorCode.INVALID_REQUEST,
+                "不合法的時間區間：" + period,
+                HttpStatus.BAD_REQUEST
+            );
+        };
+    
+        List<WorkoutSession> sessions = workoutSessionRepository.findByUserIdAndDateAfter(userId, start);
+    
+        return sessions.stream()
+            .flatMap(session -> session.getExercises().stream())
+            .flatMap(ex -> {
+                WorkoutType type = ex.getWorkoutType();
+                String mainTag = type.getMainTag();
+                return ex.getSets().stream().map(set -> mainTag); // 每組對應一個 mainTag
+            })
+            .filter(Objects::nonNull)
+            .collect(Collectors.groupingBy(Function.identity(), Collectors.counting()));
+    }
+
+    //chart3
+    public List<VolumeProgressDTO> getVolumeProgress(Long userId, Long typeId, int count) {
+        List<WorkoutSession> sessions = workoutSessionRepository.findByUserIdOrderByDateDesc(userId);
+
+        List<VolumeProgressDTO> all = sessions.stream()
             .map(session -> {
-                Integer totalWeihgt = calculateTotalWeight(session.getSets());
-                return new WorkoutSessionSummaryDTO(session.getId(), session.getDate(), session.getNote(), totalWeihgt);
-            }).collect(Collectors.toList());
-        return summaryDTO;
-    }
+                int volume = session.getExercises().stream()
+                    .filter(ex -> ex.getWorkoutType().getId().equals(typeId))
+                    .flatMap(ex -> ex.getSets().stream())
+                    .mapToInt(set -> set.getReps() * set.getWeight())
+                    .sum();
+                
+                return new VolumeProgressDTO(session.getDate(), volume);
+            })
+            .filter(dto -> dto.getVolume() > 0)
+            .limit(count)
+            .toList();
 
-    public List<WeeklySummaryDTO> getWeeklySummary(Long id){
-        userRepository.findById(id).orElseThrow(() -> new ApiException(ApiErrorCode.USER_NOT_FOUND, "找不到使用者, id:" + id, HttpStatus.NOT_FOUND));
-        DateTimeFormatter dTimeFormatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-        Map<String, Integer> weekToTotalWeight = new HashMap<>();
-        for(WorkoutSession workoutSession:workoutSessionRepository.findByUser_Id(id)){
-            LocalDate date = LocalDate.parse(workoutSession.getDate(),dTimeFormatter);
-            WeekFields weekFields = WeekFields.of(Locale.getDefault());
-            Integer weekNumber = date.get(weekFields.weekOfWeekBasedYear());
-            Integer year = date.getYear();
-            String weekKey = year + "-W" + weekNumber;
+        // 往前抓是由新到舊，但圖表要由舊到新
+        Collections.reverse(all);
 
-            Integer sessionTotal = 0;
-            for(WorkoutSet workoutSet:workoutSession.getSets()){
-                sessionTotal += workoutSet.getReps()*workoutSet.getWeight();
-            }
-            weekToTotalWeight.merge(weekKey, sessionTotal, Integer::sum);
-        }   
-        return weekToTotalWeight.entrySet().stream()
-            .map(entry -> new WeeklySummaryDTO(entry.getKey(), entry.getValue()))
-            .collect(Collectors.toList());
-    }
-
-    public List<WeeklyFrequencyDTO> getWeeklyFrequency(Long id){
-        userRepository.findById(id).orElseThrow(() -> new ApiException(ApiErrorCode.USER_NOT_FOUND, "找不到使用者, id:" + id, HttpStatus.NOT_FOUND));
-        DateTimeFormatter dateTimeFormatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-        WeekFields weekFields = WeekFields.of(Locale.getDefault());
-        Map<String, Set<String>> weekToDates = workoutSessionRepository.findByUser_Id(id)
-        .stream()
-        .collect(Collectors.groupingBy(
-            session -> {
-                LocalDate date = LocalDate.parse(session.getDate(), dateTimeFormatter);
-                int week = date.get(weekFields.weekOfWeekBasedYear());
-                int year = date.getYear();
-                return year + "-W" + week;
-            },
-            Collectors.mapping(WorkoutSession::getDate, Collectors.toSet())
-        ));
-        List<WeeklyFrequencyDTO> weeklyFrequencyDTOs = weekToDates.entrySet().stream()
-            .map(entry -> {
-                return new WeeklyFrequencyDTO(entry.getKey(), entry.getValue().size());
-            }).collect(Collectors.toList());
-        return weeklyFrequencyDTOs;
-    }
-
-    public List<MuscleGroupTotalDTO> getTotalWeightsByMuscleGroup(Long id){//
-        User user = userRepository.findById(id).orElseThrow(() ->
-            new ApiException(ApiErrorCode.USER_NOT_FOUND, "使用者不存在,ID:" + id, HttpStatus.NOT_FOUND)
-        );  
-        Map<String, Integer> groupTotals = new HashMap<>();
-        for(WorkoutSession session:user.getWorkoutSessions()){
-            for(WorkoutSet set:session.getSets()){
-                Integer total = set.getReps()*set.getWeight();
-                WorkoutType type = workoutTypeRepository.findById(set.getTypeId()).orElseThrow(() -> 
-                    new ApiException(ApiErrorCode.TYPE_NOT_FOUND, "找不到對應動作類型", HttpStatus.NOT_FOUND)
-                );
-                groupTotals.put(type.getMuscleGroup(), groupTotals.getOrDefault(type.getMuscleGroup(), 0) + total);
-            }
-        }
-        List<MuscleGroupTotalDTO> muscleGroupTotalDTOs = groupTotals.entrySet().stream()
-            .map(entry -> new MuscleGroupTotalDTO(entry.getKey(), entry.getValue()))
-            .sorted(Comparator.comparing(MuscleGroupTotalDTO::getTotalWeight).reversed()) 
-            .collect(Collectors.toList());
-        return muscleGroupTotalDTOs;
-    }
-
-
-    public List<PopularTypesDTO> getPopularWorkoutType(Long id){
-        userRepository.findById(id).orElseThrow(() -> new ApiException(ApiErrorCode.USER_NOT_FOUND, "使用者不存在,ID:" + id, HttpStatus.NOT_FOUND));  
-        Map<String, Integer> countMap = new HashMap<>();
-        for(WorkoutSession session:workoutSessionRepository.findByUser_Id(id)){
-            for(WorkoutSet set:session.getSets()){
-                String type = findWorkoutTypeNameByTypeId(set.getTypeId());
-                countMap.put(type, countMap.getOrDefault(type, 0) + 1);
-            }
-        }
-        List<PopularTypesDTO> popularTypesDTOs = countMap.entrySet().stream()
-            .map(entry -> new PopularTypesDTO(entry.getKey(), entry.getValue()))
-            .collect(Collectors.toList());
-        return popularTypesDTOs;
-    }
-
-    public List<WorkoutProgressDTO> getWorkoutProgressByType(Long id, Long typeId){
-        userRepository.findById(id).orElseThrow(() -> new ApiException(ApiErrorCode.USER_NOT_FOUND, "使用者不存在,ID:" + id, HttpStatus.NOT_FOUND));  
-        List<WorkoutProgressDTO> progressDTOs = workoutSessionRepository.findByUser_Id(id).stream().map(session -> {
-            Integer totalWeight = session.getSets().stream()
-            .filter(set -> set.getTypeId().equals(typeId))
-            .mapToInt(set -> set.getReps() * set.getWeight())
-            .sum();                   
-            return new WorkoutProgressDTO(session.getDate(), totalWeight);
-        })
-        .filter(dto -> dto.getTotalWeight() > 0)
-        .collect(Collectors.toList());
-        return progressDTOs;
+        return all;
     }
 }
